--- a/css/style.less
+++ b/css/style.less
@@ -545,60 +545,6 @@ div.sign{
     margin-bottom: 10px;
 }
 
-/*
-.avatar {
-    margin-bottom: 20px;
-
-}
-
-.team-social {
-    margin-left: 0;
-    padding-left: 0;
-
-}
-
-.team-social {
-    text-align: center;
-}
-
-.team-social li{
-    display: inline-block;
-    margin:0 !important;
-    padding:0;
-}
-
-
-.team-social a{
-    margin:0;
-    padding:0;
-    display: block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    background: #3bbec0;
-    color: #fff;
-    -webkit-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-.team-social a i{
-    text-align: center;
-    margin:0;
-    padding:0;
-}
-.team-social .social-facebook a{background: #3873ae;}
-.team-social .social-twitter a{background: #62c6f8;}
-.team-social .social-dribble a{background: #d74980;}
-.team-social .social-deviantart a{background: #8da356;}
-.team-social .social-google a{background: #000;}
-.team-social .social-vimeo a{background: #51a6d3;}
-.team-social .social-facebook a:hover{background: #4893ce;}
-.team-social .social-twitter a:hover{background: #82e6ff;}
-.team-social .social-dribble a:hover{background: #f769a0;}
-.team-social .social-deviantart a:hover{background: #adc376;}
-.team-social .social-google a:hover{background: #333;}
-.team-social .social-vimeo a:hover{background: #71c6f3;}
-*/
 
 // ===========================--- Services============================
 
@@ -606,86 +552,6 @@ div.sign{
     margin-bottom: 20px;
 }
 
-// ===========================--- Contact============================
-/*
-form#contact-form .form-group label {
-    text-align: left !important;
-    display: block;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 12px;
-}
-form#contact-form input,form#contact-form select,form#contact-form textarea {
-    border-radius: 0;
-    border: 1px solid #eee;
-    -webkit-box-shadow: none;
-    box-shadow:  none;
-}
-
-form#contact-form input:focus,form#contact-form select:focus,form#contact-form textarea:focus {
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-}
-.input-group-addon {
-    background-color: #fefefe;
-    border: 1px solid #eee;
-    border-radius: 0;
-}
-
-.widget-contact {
-    text-align: left;
-}
-
-
-.company-social {
-    margin-left: 0;
-    padding-left: 0;
-    margin-top: 10px;
-}
-
-.company-social {
-    text-align: left;
-}
-
-.company-social li{
-    display: inline-block;
-    margin:0 !important;
-    padding:0;
-}
-
-
-.company-social a{
-    margin:0;
-    padding:0;
-    display: block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    background: #3bbec0;
-    color: #fff;
-    -webkit-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-.company-social a i{
-    text-align: center;
-    margin:0;
-    padding:0;
-}
-
-.company-social .social-facebook a{background: #3873ae;}
-.company-social .social-twitter a{background: #62c6f8;}
-.company-social .social-dribble a{background: #d74980;}
-.company-social .social-deviantart a{background: #8da356;}
-.company-social .social-google a{background: #000;}
-.company-social .social-vimeo a{background: #51a6d3;}
-.company-social .social-facebook a:hover{background: #4893ce;}
-.company-social .social-twitter a:hover{background: #82e6ff;}
-.company-social .social-dribble a:hover{background: #f769a0;}
-.company-social .social-deviantart a:hover{background: #adc376;}
-.company-social .social-google a:hover{background: #333;}
-.company-social .social-vimeo a:hover{background: #71c6f3;}
-*/
 //-------------作品-------------
 #collection{
     //text-align: center;
@@ -704,6 +570,12 @@ form#contact-form input:focus,form#contact-form select:focus,form#contact-form t
             margin-right:1em;
             height: 12em;
             width: 15em;
+            background-color:#fff;
+            text-align: center;
+            img{
+                height: 100%
+                //margin:0 auto;
+            }
             div{
                 height: 100%;
                 width: 100%;
